website/versioned_docs/version-2.7.x/reference/subsystems/mypy-protobuf.mdx
---
title: mypy-protobuf
---

import Option from "@site/src/components/reference/Option";
import styles from "@site/src/components/reference/styles.module.css";

---

Configuration of the mypy-protobuf type stub generation plugin.

Backend: <span className="color--primary">`pants.core`</span>

Config section: <span className="color--primary">`[mypy-protobuf]`</span>

<span className={styles.options}>

## Basic options

None

## Advanced options

### `version`

<Option
  cli_repr={`--mypy-protobuf-version=<str>`}
  env_repr="PANTS_MYPY_PROTOBUF_VERSION"
  default_repr={`mypy-protobuf==2.4`}
>
  Requirement string for the tool.
</Option>

### `extra_requirements`

<Option
  cli_repr={`--mypy-protobuf-extra-requirements="['<str>', '<str>', ...]"`}
  env_repr="PANTS_MYPY_PROTOBUF_EXTRA_REQUIREMENTS"
  default_repr={`[]`}
>
  Any additional requirement strings to use with the tool. This is useful if the
  tool allows you to install plugins or if you need to constrain a dependency to
  a certain version.
</Option>

### `interpreter_constraints`

<Option
  cli_repr={`--mypy-protobuf-interpreter-constraints="['<str>', '<str>', ...]"`}
  env_repr="PANTS_MYPY_PROTOBUF_INTERPRETER_CONSTRAINTS"
  default_repr={`["CPython>=3.6"]`}
>
  Python interpreter constraints for this tool.
</Option>

### `lockfile`

<Option
  cli_repr={`--mypy-protobuf-lockfile=<str>`}
  env_repr='PANTS_MYPY_PROTOBUF_LOCKFILE'
  default_repr={`<default>`}
>
Path to a lockfile used for installing the tool.

Set to the string `<default>` to use a lockfile provided by Pants, so long as you have not changed the `--version` and `--extra-requirements` options, and the tool&#x27;s interpreter constraints are compatible with the default. Pants will error or warn if the lockfile is not compatible (controlled by `[python-setup].invalid_lockfile_behavior`). See https://github.com/pantsbuild/pants/blob/release_2.7.2/src/python/pants/backend/codegen/protobuf/python/mypy_protobuf_lockfile.txt for the default lockfile contents.

Set to the string `<none>` to opt out of using a lockfile. We do not recommend this, though, as lockfiles are essential for reproducible builds.

To use a custom lockfile, set this option to a file path relative to the build root, then run `./pants generate-lockfiles --resolve=mypy-protobuf`.

Lockfile generation currently does not wire up the `[python-repos]` options. If lockfile generation fails, you can manually generate a lockfile, such as by using pip-compile or `pip freeze`. Set this option to the path to your manually generated lockfile. When manually maintaining lockfiles, set `[python-setup].invalid_lockfile_behavior = 'ignore'`.

</Option>

## Deprecated options

None

</span>

